# inspect-mlflow

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  config.yml  feature_request.yaml  feature_request.yml
.github/workflows/: api-compat.yml  ci.yml  docs-check.yml  release.yml
docs/: requirements.txt
docs/source/: api.rst  comparison.rst  conf.py  config.rst  index.rst  scout.rst  tracing.rst  tracking.rst
inspect_mlflow/: __init__.py  _autolog.py  _registry.py  config.py  scout.py  tracing.py  tracking.py  util.py
inspect_mlflow/artifacts/: __init__.py  manager.py  tables.py
inspect_mlflow/comparison/: __init__.py  _alignment.py  _compare.py  _statistics.py  _types.py
scripts/: run_complex_demo.py  run_demo.py  take_screenshots.py  test_scout_e2e.py  test_scout_full_e2e.py
tests/: conftest.py  test_autolog.py  test_comparison.py  test_config.py  test_scout.py  test_tracing.py  test_tracking.py
