[project]
name = "inspect-mlflow"
dynamic = ["version"]
description = "MLflow integration for Inspect AI: experiment tracking, execution tracing, evaluation comparison, and Scout analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Debu Sinha", email = "debusinha2009@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "inspect-ai>=0.3.180",
    "mlflow>=3.0,<4.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
scout = ["inspect-scout>=0.1.0"]
config = ["pydantic>=2.0", "pydantic-settings>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "anyio>=4.0",
    "ruff>=0.14",
    "mypy>=1.10",
    "pre-commit>=4.0",
    "codespell>=2.4",
    "openai>=2.29.0",
    "inspect-scout>=0.4.21",
]

[project.urls]
Homepage = "https://github.com/debu-sinha/inspect-mlflow"
Issues = "https://github.com/debu-sinha/inspect-mlflow/issues"
Repository = "https://github.com/debu-sinha/inspect-mlflow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "inspect_mlflow/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["inspect_mlflow"]

# Entry point: Inspect AI discovers hooks from installed packages via this
[project.entry-points.inspect_ai]
inspect_mlflow = "inspect_mlflow._registry"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["inspect_mlflow"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP", "SIM", "PIE", "RUF"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["inspect_ai.*", "mlflow.*", "pydantic_settings.*"]
ignore_missing_imports = true
